--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -17,12 +17,14 @@
         <li><a routerLink="/travel" routerLinkActive="active"><i class="lnr lnr-map-marker"></i> <span>Travel
               History</span></a></li>
         <!-- <li><a routerLink="/settings" routerLinkActive="active"><i class="lnr lnr-cog"></i> <span>Settings</span></a></li> -->
-        
+
         <li (click)="logout()" class="fixed-bottom">
-            <a href="javascript:void(0);">
-                <i class="lnr lnr-power-switch" style="color: salmon"></i>
-            <span style="color: salmon;">Logout</span>
-            </a>
+          <a href="javascript:void(0);">
+            <strong>
+              <i class="lnr lnr-power-switch" style="color: salmon"></i>
+              <span style="color: salmon;"> Logout </span>
+            </strong>
+          </a>
         </li>
       </ul>
     </nav>
