updated dashboard with routerLinks and css

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
         <div class="panel-body">
             <div class="row">
                 <div class="col-md-3">
-                    <div class="metric">
+                    <div class="metric" routerLink="/bus-management">
                         <span class="icon"><i class="fa fa-bus"></i></span>
                         <p>
                             <span class="number"> {{ buses }}   </span>
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="metric">
+                    <div class="metric" routerLink="/users">
                         <span class="icon"><i class="fa fa-users"></i></span>
                         <p>
                             <span class="number"> {{ users }} </span>
